@@ -3,6 +3,8 @@
 
 -sin footer y sin zxdesktop, peta, a veces (quiza cuando ha dejado configuracion sin footer de que ha salido mal)
 
+-agregar en features ay sheet, ay piano, ay to mid, etc
+
 Para próxima versión ZEsarUX:
 -cpuid ("zxid") según especificación de mcleod
 
