@@ -69,6 +69,7 @@ extern void menu_debug_registers_splash_memory_zone(void);
 extern void menu_breakpoint_fired(char *s);
 
 extern void menu_ay_partitura(MENU_ITEM_PARAMETERS);
+extern void menu_record_mid(MENU_ITEM_PARAMETERS);
 
 #endif
 
